# pymsrc

./: .gitignore  2022-09-13-patch_tuesday.json  2022-09-13-patch_tuesday.xlsx  2024-05-14-patch_tuesday.json  2024-05-14-patch_tuesday.xlsx  README.MD  README.md  pyproject.toml
src/: main.py  pymsrc.py
tests/: tests.py
